--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.application.name=student-service
-eureka.client.serviceUrl.defaultZone:http://eurekaservice.216.svc:8080/
+eureka.client.serviceUrl.defaultZone:http://eurekaservice-216.apps.na39.openshift.opentlc.com/
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
