--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.application.name=student-service
+spring.application.name=student-ms
 eureka.client.serviceUrl.defaultZone=http://eurekaservice.216.svc:8761/eureka/
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
